--- a/style.css
+++ b/style.css
@@ -4,20 +4,29 @@
   }
 }
 
-.kill-fit {
+
+.box {
   background-color: #1d1d1d;
   border: 1px solid #565242;
   border-radius: 4px;
-  z-index: 10000;
   padding: 10px;
   min-width: 52px;
   min-height: 52px;
-  position: absolute;
+}
+
+.overlay-tooltip {
   top: 0px;
   left: calc(100% - 1px);
-  display: flex;
+  z-index: 10000;
+  position: absolute;
   transform-origin: 0 0;
   animation: fade-in 120ms ease-out;
+  display: flex;
+  gap: 10px;
+}
+
+.kill-fit {
+  display: flex;
 }
 
 .kill-fit__group img {
@@ -26,6 +35,14 @@
   height: 32px;
 }
 
+
+.kill-att > div {
+  display: flex;
+}
+.kill-att > div > img {
+  width: 32px;
+  height: 32px;
+}
 
 
 
@@ -48,4 +65,17 @@
   100% {
     transform: rotate(360deg);
   }
-} 
+}
+
+.ellipsis {
+  color: #565242;
+  font-weight: 900;
+  font-size: 16px;
+}
+
+
+#nameTooltip {
+  position: absolute;
+  background: black;
+  color: white;
+}
